--- a/OdeToFood/Pages/Restaurants/Edit.cshtml
+++ b/OdeToFood/Pages/Restaurants/Edit.cshtml
@@ -8,7 +8,6 @@
 <h1>Editint @Model.Restaurant.Name</h1>
 
 <form method="post">
-
     <input type="hidden" asp-for="Restaurant.ID" />
     <div class="form-group">
         <label asp-for="Restaurant.Name"></label>
@@ -28,3 +27,6 @@
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
+@section Scripts{
+    <partial name="_ValidationScriptsPartial"/>
+}
